# VideoManager

./: CMakeLists.txt  README.md  data.json  post_json.c  test_player.json  tests.cpp
assets/: magistrade.json  manager.sh  messenger.json  videomanager.service
manager/: CMakeLists.txt  crow_all.h  manager.cpp  manager.hpp
manager/src/: main.cpp
player/: CMakeLists.txt  container.cpp  container.hpp  player.cpp  player.hpp
player/include/: container.hpp  player.hpp
player/src/: container.cpp  player.cpp
